
icondir = $(datadir)/icons/hicolor

nobase_dist_icon_DATA = \
    16x16/apps/multiload-ng.png \
    24x24/apps/multiload-ng.png \
    32x32/apps/multiload-ng.png \
    48x48/apps/multiload-ng.png \
    64x64/apps/multiload-ng.png \
    96x96/apps/multiload-ng.png \
    128x128/apps/multiload-ng.png \
    256x256/apps/multiload-ng.png \
    512x512/apps/multiload-ng.png \
    scalable/apps/multiload-ng.svg

install-data-hook:
	-@echo "Remember to update icon cache (eg. using gtk-update-icon-cache)"
